hphp/test/zend/good/zend/array_append_COW.php
<?php
	$a=array();
	$b=1;
	$c=&$b;
	$a[]=$b;
	$b=2;
	var_dump ($a);
?>